objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Battery__c</fullName>
        <label>Battery</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Commuter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charger__c</fullName>
        <label>Charger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fork__c</fullName>
        <label>Fork</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_Brakes__c</fullName>
        <label>Front Brakes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Enthusiast</fullName>
                </value>
                <value>
                    <fullName>Racer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <label>MSRP</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Carbon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motor__c</fullName>
        <label>Motor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rear_Brakes__c</fullName>
        <label>Rear Brakes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>ProductList</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>MSRP__c</columns>
        <columns>Description__c</columns>
        <columns>Category__c</columns>
        <columns>Level__c</columns>
        <columns>Picture_URL__c</columns>
        <columns>Material__c</columns>
        <filterScope>Everything</filterScope>
        <label>ProductList</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>